# server/sku_business.go
@@ -17,7 +17,7 @@ func NewSkuBusinessServer() sku_business.SkuBusinessServiceServer {
 func (s *SkuBusinessServer) PutAwaySku(ctx context.Context, req *sku_business.PutAwaySkuRequest) (*sku_business.PutAwaySkuResponse, error) {
 	var result sku_business.PutAwaySkuResponse
 	result.Common = &sku_business.CommonResponse{
-		Code: 0,
+		Code: sku_business.RetCode_SUCCESS,
 		Msg:  "",
 	}
 	if req.Sku.SkuCode == "" {
@@ -29,22 +29,17 @@ func (s *SkuBusinessServer) PutAwaySku(ctx context.Context, req *sku_business.Pu
 	if retCode != code.Success {
 		if retCode == code.SkuCodeExist {
 			result.Common.Code = sku_business.RetCode_SKU_EXIST
-			result.Common.Msg = errcode.GetErrMsg(code.SkuCodeExist)
-			return &result, nil
-		}
-		if retCode == code.ShopBusinessNotExist {
+		} else if retCode == code.ShopBusinessNotExist {
 			result.Common.Code = sku_business.RetCode_SHOP_NOT_EXIST
-			result.Common.Msg = errcode.GetErrMsg(code.ShopBusinessNotExist)
-			return &result, nil
+		} else if retCode == code.TransactionFailed {
+			result.Common.Code = sku_business.RetCode_TRANSACTION_FAILED
+		} else {
+			result.Common.Code = sku_business.RetCode_ERROR
 		}
-		result.Common.Code = sku_business.RetCode_ERROR
-		result.Common.Msg = errcode.GetErrMsg(code.ErrorServer)
+		result.Common.Msg = errcode.GetErrMsg(retCode)
 		return &result, nil
 	}
-	result.Common.Code = sku_business.RetCode_SUCCESS
-	result.Common.Msg = errcode.GetErrMsg(code.Success)
 	return &result, nil
-
 }
 
 func (s *SkuBusinessServer) GetSkuList(ctx context.Context, req *sku_business.GetSkuListRequest) (*sku_business.GetSkuListResponse, error) {
@@ -83,7 +78,7 @@ func (s *SkuBusinessServer) GetSkuList(ctx context.Context, req *sku_business.Ge
 func (s *SkuBusinessServer) SupplementSkuProperty(ctx context.Context, req *sku_business.SupplementSkuPropertyRequest) (*sku_business.SupplementSkuPropertyResponse, error) {
 	var result sku_business.SupplementSkuPropertyResponse
 	result.Common = &sku_business.CommonResponse{
-		Code: 0,
+		Code: sku_business.RetCode_SUCCESS,
 		Msg:  "",
 	}
 	if req.SkuCode == "" {
@@ -92,24 +87,19 @@ func (s *SkuBusinessServer) SupplementSkuProperty(ctx context.Context, req *sku_
 		return &result, nil
 	}
 	retCode := service.SupplementSkuProperty(ctx, req)
-
 	if retCode != code.Success {
 		if retCode == code.SkuCodeExist {
 			result.Common.Code = sku_business.RetCode_SKU_EXIST
-			result.Common.Msg = errcode.GetErrMsg(code.SkuCodeExist)
-			return &result, nil
-		}
-		if retCode == code.ShopBusinessNotExist {
+		} else if retCode == code.ShopBusinessNotExist {
 			result.Common.Code = sku_business.RetCode_SHOP_NOT_EXIST
-			result.Common.Msg = errcode.GetErrMsg(code.ShopBusinessNotExist)
-			return &result, nil
+		} else if retCode == code.TransactionFailed {
+			result.Common.Code = sku_business.RetCode_TRANSACTION_FAILED
+		} else {
+			result.Common.Code = sku_business.RetCode_ERROR
 		}
-		result.Common.Code = sku_business.RetCode_ERROR
-		result.Common.Msg = errcode.GetErrMsg(code.ErrorServer)
+		result.Common.Msg = errcode.GetErrMsg(retCode)
 		return &result, nil
 	}
-	result.Common.Code = sku_business.RetCode_SUCCESS
-	result.Common.Msg = errcode.GetErrMsg(code.Success)
 	return &result, nil
 }
 
@@ -119,16 +109,40 @@ func (s *SkuBusinessServer) DeductInventory(ctx context.Context, req *sku_busine
 		Code: sku_business.RetCode_SUCCESS,
 		Msg:  errcode.GetErrMsg(code.Success),
 	}
-
 	_, retCode := service.DeductInventory(ctx, req)
 	if retCode != code.Success {
 		if retCode == code.SkuAmountNotEnough {
 			result.Common.Code = sku_business.RetCode_SKU_AMOUNT_NOT_ENOUGH
-			result.Common.Msg = errcode.GetErrMsg(code.SkuAmountNotEnough)
-			return &result, nil
+		} else if retCode == code.TransactionFailed {
+			result.Common.Code = sku_business.RetCode_TRANSACTION_FAILED
+		} else {
+			result.Common.Code = sku_business.RetCode_ERROR
 		}
-		result.Common.Code = sku_business.RetCode_ERROR
-		result.Common.Msg = errcode.GetErrMsg(code.ErrorServer)
+		result.Common.Msg = errcode.GetErrMsg(retCode)
+		return &result, nil
+	}
+	result.IsSuccess = true
+	return &result, nil
+}
+
+func (s *SkuBusinessServer) RestoreInventory(ctx context.Context, req *sku_business.RestoreInventoryRequest) (*sku_business.RestoreInventoryResponse, error) {
+	var result = sku_business.RestoreInventoryResponse{
+		Common: &sku_business.CommonResponse{
+			Code: sku_business.RetCode_ERROR,
+			Msg:  "",
+		},
+		IsSuccess: false,
+	}
+	retCode := service.RestoreInventory(ctx, req)
+	if retCode != code.Success {
+		if retCode == code.SkuAmountNotEnough {
+			result.Common.Code = sku_business.RetCode_SKU_AMOUNT_NOT_ENOUGH
+		} else if retCode == code.TransactionFailed {
+			result.Common.Code = sku_business.RetCode_TRANSACTION_FAILED
+		} else {
+			result.Common.Code = sku_business.RetCode_ERROR
+		}
+		result.Common.Msg = errcode.GetErrMsg(retCode)
 		return &result, nil
 	}
 	result.IsSuccess = true
